tests/baselines/reference/numberToString.errors.txt
==== tests/cases/compiler/numberToString.ts (3 errors) ====
    function f1(n:number):string {
        return n; // error return type mismatch
               ~
!!! error TS2011: Cannot convert 'number' to 'string'.
    }
    
    function f2(s:string):void {
    }
    
    f1(3);
    f2(3); // error no coercion to string
    ~~
!!! error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~
!!! error TS2087: Could not select overload for 'call' expression.
    f2(3+""); // ok + operator promotes
    